# StockPredict

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py
app/data/: clear_and_calc.py  data_pipeline.py  loader.py  preprocessing.py
app/models/: model.py  train.py
data/: AAPL.csv
tests/: test_model2.py
