[project]
name = "StockPredict"
version = "0.1.0"
description = "Model do przewidywania cen akcji z użyciem PyTorch i yfinance"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torch-optim (>=0.0.4,<0.0.5)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "yfinance (>=0.2.62,<0.3.0)"
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
